// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs 1`] = `
<div
  class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
>
  <div
    class="Optionstyles__Box-rh2rby-0 cWMvHe"
  >
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 kVjDsf"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
            />
          </svg>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
            />
          </svg>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 gupWCO"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 1
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 1
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 ctYDKa"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 2
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 2
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 dGZwgj"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 3
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 3
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs w/ less width with altText 1`] = `
<div
  style="width:300px"
>
  <div
    class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
  >
    <div
      class="Optionstyles__Box-rh2rby-0 cWMvHe"
    >
      <div
        class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
      >
        <a
          class="Optionstyles__Link-rh2rby-1 hRQBVh"
        >
          <div
            class="Optionstyles__Text-rh2rby-2 kVjDsf"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
              />
            </svg>
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
              />
            </svg>
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          />
        </a>
      </div>
    </div>
    <div
      class="Optionstyles__Box-rh2rby-0 gupWCO"
    >
      <div
        class="Optionstyles__Icon-rh2rby-4 cVvCpT"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
          />
        </svg>
      </div>
      <div
        class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
      >
        <a
          class="Optionstyles__Link-rh2rby-1 hRQBVh"
        >
          <div
            class="Optionstyles__Text-rh2rby-2 dBiXdD"
          >
            Long Name Page 1
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Long Name Page 1
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Page 1
          </div>
        </a>
      </div>
    </div>
    <div
      class="Optionstyles__Box-rh2rby-0 ctYDKa"
    >
      <div
        class="Optionstyles__Icon-rh2rby-4 cVvCpT"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
          />
        </svg>
      </div>
      <div
        class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
      >
        <a
          class="Optionstyles__Link-rh2rby-1 hRQBVh"
        >
          <div
            class="Optionstyles__Text-rh2rby-2 dBiXdD"
          >
            Long Name Page 2
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Long Name Page 2
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Page 2
          </div>
        </a>
      </div>
    </div>
    <div
      class="Optionstyles__Box-rh2rby-0 dGZwgj"
    >
      <div
        class="Optionstyles__Icon-rh2rby-4 cVvCpT"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
          />
        </svg>
      </div>
      <div
        class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
      >
        <a
          class="Optionstyles__Link-rh2rby-1 hRQBVh"
        >
          <div
            class="Optionstyles__Text-rh2rby-2 dBiXdD"
          >
            Long Name Page 3
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Long Name Page 3
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Page 3
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs w/ less width without altText 1`] = `
<div
  style="width:300px"
>
  <div
    class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
  >
    <div
      class="Optionstyles__Box-rh2rby-0 cWMvHe"
    >
      <div
        class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
      >
        <a
          class="Optionstyles__Link-rh2rby-1 hRQBVh"
        >
          <div
            class="Optionstyles__Text-rh2rby-2 kVjDsf"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
              />
            </svg>
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
              />
            </svg>
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          />
        </a>
      </div>
    </div>
    <div
      class="Optionstyles__Box-rh2rby-0 gupWCO"
    >
      <div
        class="Optionstyles__Icon-rh2rby-4 cVvCpT"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
          />
        </svg>
      </div>
      <div
        class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
      >
        <a
          class="Optionstyles__Link-rh2rby-1 hRQBVh"
        >
          <div
            class="Optionstyles__Text-rh2rby-2 dBiXdD"
          >
            Long Name Page 1
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Long Name Page 1
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          />
        </a>
      </div>
    </div>
    <div
      class="Optionstyles__Box-rh2rby-0 ctYDKa"
    >
      <div
        class="Optionstyles__Icon-rh2rby-4 cVvCpT"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
          />
        </svg>
      </div>
      <div
        class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
      >
        <a
          class="Optionstyles__Link-rh2rby-1 hRQBVh"
        >
          <div
            class="Optionstyles__Text-rh2rby-2 dBiXdD"
          >
            Long Name Page 2
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Long Name Page 2
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          />
        </a>
      </div>
    </div>
    <div
      class="Optionstyles__Box-rh2rby-0 dGZwgj"
    >
      <div
        class="Optionstyles__Icon-rh2rby-4 cVvCpT"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
          />
        </svg>
      </div>
      <div
        class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
      >
        <a
          class="Optionstyles__Link-rh2rby-1 hRQBVh"
        >
          <div
            class="Optionstyles__Text-rh2rby-2 dBiXdD"
          >
            Long Name Page 3
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          >
            Long Name Page 3
          </div>
          <div
            class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs w/ sizes more then 1 item 1`] = `
<div
  class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
>
  <div
    class="Optionstyles__Box-rh2rby-0 fvUONB"
  >
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 kVjDsf"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
            />
          </svg>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
            />
          </svg>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 iTypJl"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 wUhYH"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 1
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 1
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 iHTuaV"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 wUhYH"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 2
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 2
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 ceINFY"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 wUhYH"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 3
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 3
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs w/ sizes more then 1 item 2`] = `
<div
  class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
>
  <div
    class="Optionstyles__Box-rh2rby-0 cWMvHe"
  >
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 kVjDsf"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
            />
          </svg>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
            />
          </svg>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 gupWCO"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 1
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 1
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 ctYDKa"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 2
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 2
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 dGZwgj"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 3
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 3
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs w/ sizes more then 1 item 3`] = `
<div
  class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
>
  <div
    class="Optionstyles__Box-rh2rby-0 bkGFWE"
  >
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 kVjDsf"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
            />
          </svg>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M9 15a1 1 0 011-1h4a1 1 0 011 1v4h4v-6.586l-7-7-7 7V19h4v-4zm2 1v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-8a1 1 0 01.293-.707l8-8a1 1 0 011.414 0l8 8A1 1 0 0121 12v8a1 1 0 01-1 1h-6a1 1 0 01-1-1v-4h-2z"
            />
          </svg>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 eIkgSo"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 1
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 1
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 hSCGbY"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 cxCtbY"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 2
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 2
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
  <div
    class="Optionstyles__Box-rh2rby-0 kyhEfd"
  >
    <div
      class="Optionstyles__Icon-rh2rby-4 cVvCpT"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
        />
      </svg>
    </div>
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 dBiXdD"
        >
          Long Name Page 3
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          Long Name Page 3
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs w/ sizes only 1 item 1`] = `
<div
  class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
>
  <div
    class="Optionstyles__Box-rh2rby-0 fvUONB"
  >
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 kVjDsf"
        >
          <div
            class="Breadcrumbsstyles__BackIcon-g1i28t-1 gaNJyj"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
              />
            </svg>
          </div>
          <span>
            Вернуться к Long Name Page 1
          </span>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          <div
            class="Breadcrumbsstyles__BackIcon-g1i28t-1 gaNJyj"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
              />
            </svg>
          </div>
          <span>
            Вернуться к Long Name Page 1
          </span>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs w/ sizes only 1 item 2`] = `
<div
  class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
>
  <div
    class="Optionstyles__Box-rh2rby-0 cWMvHe"
  >
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 kVjDsf"
        >
          <div
            class="Breadcrumbsstyles__BackIcon-g1i28t-1 gaNJyj"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
              />
            </svg>
          </div>
          <span>
            Вернуться к Long Name Page 1
          </span>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          <div
            class="Breadcrumbsstyles__BackIcon-g1i28t-1 gaNJyj"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
              />
            </svg>
          </div>
          <span>
            Вернуться к Long Name Page 1
          </span>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs w/ sizes only 1 item 3`] = `
<div
  class="Breadcrumbsstyles__Box-g1i28t-0 eEJqyD"
>
  <div
    class="Optionstyles__Box-rh2rby-0 bkGFWE"
  >
    <div
      class="Tooltipstyles__Box-c7nxm1-0 dhsvcl"
    >
      <a
        class="Optionstyles__Link-rh2rby-1 hRQBVh"
      >
        <div
          class="Optionstyles__Text-rh2rby-2 kVjDsf"
        >
          <div
            class="Breadcrumbsstyles__BackIcon-g1i28t-1 gaNJyj"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
              />
            </svg>
          </div>
          <span>
            Вернуться к Long Name Page 1
          </span>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        >
          <div
            class="Breadcrumbsstyles__BackIcon-g1i28t-1 gaNJyj"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
              />
            </svg>
          </div>
          <span>
            Вернуться к Long Name Page 1
          </span>
        </div>
        <div
          class="Optionstyles__HiddenText-rh2rby-3 esAHYF"
        />
      </a>
    </div>
  </div>
</div>
`;
